<resources>
    <string name="app_name">MPLauncher</string>
    <string name="phone_info">Name: %s \nModel: %s \nSoftware: %s</string>
    <string name="phone_moreinfo">MPL Version: %s \nMPL Version code: %d \nDevice: %s \nPhone brand: %s \nPhone model: %s \nProduct: %s \nHardware: %s \nBuild: %s \nBuild time: %d</string>
    <string name="settings_theme_accent_title_part1">accent color</string>
    <string name="settings_theme_accent_title_part2">Change your phone\'s background and </string>
    <string name="settings_theme_accent_title_part3">to match your mood today, this week, or all month</string>
    <string name="remove"><u>remove</u></string>
    <string name="tileSettings_color_sub">selected color: %s</string>
    <string name="reset_warning">Resetting the launcher will remove all tile settings, themes, and the start menu. THIS DOES NOT APPLY TO PHONE APPLICATIONS AND PERSONAL DATA. Do you want to continue?</string>
    <string name="reset_warning_title">WARNING!</string>
    <string name="bsod">:(</string>
    <string name="bsodDialogMessage">It caused the launcher to reboot. You can send us information about the problem to help us improve MetroPhoneLauncher.</string>
    <string name="bsodDialogTitle">There\'s a problem with your launcher</string>
    <string name="bsodDialogDismiss">Don\'t send</string>
    <string name="bsodDialogSend">Send</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="automatic_repair">Automatic Repair</string>
    <string name="not_start_correctly">Your launcher did not start correctly</string>
    <string name="auto_repair_tip">Press \'Restart\' to restart your launcher, which can sometimes fix the problem. You can also press \'Advanced options\' to try other options to repair your launcher.</string>
    <string name="restart">Restart</string>
    <string name="advanced_options">Advanced options</string>
    <string name="feedback_limit_0">only the most recent one</string>
    <string name="feedback_limit_1">last 5</string>
    <string name="feedback_limit_2">last 10</string>
    <string name="feedback_limit_3">as much as possible</string>
    <string name="start_theme">start+theme</string>
    <string name="start_theme_sub">customize your phone</string>
    <string name="feedback">feedback</string>
    <string name="feedback_sub">help me improve MetroPhoneLauncher</string>
    <string name="launcher_update">launcher update</string>
    <string name="launcher_update_sub">get software updates</string>
    <string name="navigation_bar">navigation bar</string>
    <string name="about">about</string>
    <string name="about_sub">information about your phone</string>
    <string name="settings">SETTINGS</string>
    <string name="preparing_to_install">Preparing to install %d</string>
    <string name="up_to_date">Your phone is up to date.</string>
    <string name="checking_for_updates">Checking for updates …</string>
    <string name="update_notification">Updating MPL …</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ready_to_install">The update is ready to install</string>
    <string name="ready_to_download">The update is ready for download</string>
    <string name="update_failed">Something went wrong</string>
    <string name="install">install</string>
    <string name="check_for_updates">check for updates</string>
    <string name="retry">retry</string>
    <string name="update_status">Update status</string>
    <string name="download">download</string>
    <string name="download_beta">download (beta)</string>
    <string name="hide">Hide</string>
    <string name="cancel_update"><u>Cancel update</u></string>
    <string name="auto_update">Automatically download updates if my data settings allow it</string>
    <string name="notify_update">Tell me when updates are available for my phone</string>
    <string name="update_info"><u>Details</u></string>
    <string name="notification_channel_name">MPL Updates</string>
    <string name="loading">Loading…</string>
    <string name="show_more_tiles">Show more tiles</string>
    <string name="more_tiles_desc">You can change the size and number of tiles available on your start screen</string>
    <string name="start_background">Start background</string>
    <string name="choose_photo">choose photo</string>
    <string name="accent_color">Accent color</string>
    <string name="background">Background</string>
    <string name="launcher">launcher</string>
    <string name="copy">Copy</string>
    <string name="welcome_1">We\'re here to help. In just a handful of steps, your phone will be ready to go.</string>
    <string name="back">previous</string>
    <string name="next">next</string>
    <string name="configurePhone">Choosing launcher settings</string>
    <string name="welcomePhone">Let\'s start</string>
    <string name="error">Something went wrong</string>
    <string name="configureCustomPhone">Custom settings</string>
    <string name="configureApps">Apps</string>
    <string name="welcomeAlmostDone">Almost done…</string>
    <string name="mpl_conf_tip">How would you like your MPL configured?</string>
    <string name="recommended">recommended</string>
    <string name="custom">custom</string>
    <string name="customise_your_phone_settings">Customise your phone settings</string>
    <string name="recommended_tip">Choose recommended settings to enable mobile data and automatically download launcher update. Recommended settings will also send phone info and launcher usage information to improve MPL.</string>
    <string name="oobe_done">You have finished setting up the launcher. Thank you for deciding to give MPL a try. Enjoy using it! \n MPL will be restarted.</string>
    <string name="recovry_browser_subtitle">Find information about the bug on the Internet</string>
    <string name="recovry_browser_title">Open browser</string>
    <string name="recovery_system_settings_title">Open system settings</string>
    <string name="recovery_system_settings_subtitle">Open settings in the system</string>
    <string name="recovery_settings_title">Open settings</string>
    <string name="recovery_settings_subtitle">Open settings in the launcher</string>
    <string name="launcher_restore_title">Online Restore</string>
    <string name="launcher_restore_subtitle">Download latest build and restore all settings</string>
    <string name="perms_req">Permission required</string>
    <string name="perms_req_tip">Updates require some permissions to work. Continue?</string>
    <string name="saved_issues">saved issues</string>
    <string name="always_dark">always dark</string>
    <string name="always_light">always light</string>
    <string name="matches_accent_color">matches the accent color</string>
    <string name="navigation_bar_2">Navigation bar</string>
    <string name="hide_navbar">hidden</string>
    <string name="send_launcher_usage">Send launcher usage feedback to help improve MetroPhoneLauncher</string>
    <string name="send_feedback">Send feedback</string>
    <string name="number_of_issues_to_save">Number of issues to save</string>
    <string name="show_bsods">show info</string>
    <string name="delete_bsods">delete info</string>
    <string name="bsods_tip">Your phone may save fewer issues if there isn\'t enough space</string>
    <string name="more_info">more info</string>
    <string name="online_content">online content</string>
    <string name="reset_your_launcher">reset your launcher</string>
    <string name="phone_information">phone information</string>
    <string name="help_contacts">help contacts</string>
    <string name="get_help">Get help: github.com/queuejw/metrophonelauncher/issues</string>
    <string name="details">Details</string>
    <string name="ready_to_download_beta">The beta version is ready for download</string>
    <string name="auto">auto</string>
    <string name="settings_app_title">MPL Settings</string>
    <string name="oobe_part1_tip">Selecting Launcher Settings</string>
    <string name="oobe_part2_tip">Selecting applications</string>
    <string name="oobe_part3_tip">Completion</string>
    <string name="advertisement">Advertisement</string>
    <string name="neko11_ad">Neko11 is a simple, funny and interesting game about cats. You will have to collect the largest collection of cats in the world. Feed, pet, bathe, play and dress them up in different costumes. If interested, click on the button below. Enjoy the game =)</string>
    <string name="edit_app_label">edit app label</string>
    <string name="enter_label_here">enter label here</string>
    <string name="choose_tile_color">choose tile color</string>
    <string name="selected_color">selected color: %s</string>
    <string name="uninstall">uninstall</string>
    <string name="current_iconpack">Current icon pack: %s</string>
    <string name="iconpack_error">Nothing is selected</string>
    <string name="choose_icon_pack">choose icon pack</string>
    <string name="download_recommended">Download recommended</string>
    <string name="lawnicons_mpl">Based on Lawnicons. I recommend installing it as it has been modified to work correctly in MPL.</string>
    <string name="settingsBtnInAllApps">You can get quick access to MPL settings by enabling the display of the settings button.</string>
    <string name="settingsBtnInAllApps_sub">Enable the settings button</string>
    <string name="alphabetSetting">You can disable the alphabet in the app list if it gets in the way.</string>
    <string name="alphabetSetting_sub">Show the alphabet in the app list</string>
    <string name="transparent_background_allapps_switch">Enable transparent background</string>
    <string name="transparent_background_allapps_settings">You can enable transparent background if you want to see the desktop wallpaper in the apps list</string>
    <string name="change_navbar_icon_tip">You can change the Start menu icon</string>
    <string name="current_icon">Current icon:</string>
    <string name="choose_icon">choose an icon</string>
    <string name="search_bar_tip">You can use the search bar instead of the navigation buttons</string>
    <string name="use_search_bar">Use the search bar</string>
    <string name="navigation_bar_3">Additional options</string>
    <string name="animations_settings_label">Animations</string>
    <string name="tiles_animation_settings_label">Allow animation of opening and closing applications in the Start screen</string>
    <string name="allapps_animation_settings_label">Allow animation in the app list</string>
    <string name="transition_animation_settings_label">Enable animation of transitions between MPL screens</string>
    <string name="live_tiles_animation_settings_label">Allow animation of live tiles</string>
    <string name="max_results">Max number of results</string>
    <string name="disable_all_apps">Show screen All apps</string>
    <string name="alphabet_animation_settings_label">Allow alphabet animations (not working yet)</string>
    <string name="auto_shutdown_anims">Automatically turn off animations if developer mode is enabled</string>
    <string name="current_font">current font: %s</string>
    <string name="choose_font">choose font</string>
    <string name="fonts_tip_message">Get a font in ttf or otf format, and then select it in explorer to use that font in MPL.</string>
    <string name="choose_light_font">choose light font</string>
    <string name="current_light_font">current light font: %s</string>
    <string name="current_bold_font">current bold font: %s</string>
    <string name="choose_bold_font">choose bold font</string>
    <string name="additional_fonts_tip">Ниже вы можете выбрать дополнительные шрифты, если они у Вас есть. Если нет, то будет использован текущий шрифт.</string>
</resources>