<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:alpha="0.7"
        android:text="@string/animations_settings_label"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/tilesAnimCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/tiles_animation_settings_label"
        android:textSize="20sp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/liveTilesAnimCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/live_tiles_animation_settings_label"
        android:textSize="20sp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/allAppsAnimCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/allapps_animation_settings_label"
        android:textSize="20sp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/transitionAnimCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/transition_animation_settings_label"
        android:textSize="20sp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/alphabetAnimCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/alphabet_animation_settings_label"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        android:text="@string/navigation_bar_3"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/autoShutdownAnimsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/auto_shutdown_anims"
        android:textSize="20sp" />

</LinearLayout>