<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.textview.MaterialTextView
        android:text="@string/settingsBtnInAllApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:text="@string/settingsBtnInAllApps_sub"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/settingsBtnSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textSize="24sp" />
    <com.google.android.material.textview.MaterialTextView
        android:text="@string/alphabetSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:text="@string/alphabetSetting_sub"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/alphabetSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textSize="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/transparent_background_allapps_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:text="@string/transparent_background_allapps_switch"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/allAppsBackgroundSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textSize="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        android:text="@string/navigation_bar_3"/>

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/disable_all_apps"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/disableAllAppsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textSize="24sp" />
</LinearLayout>