<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/currentIconPackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/current_iconpack"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/currentIconPackError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/iconpack_error"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/removeIconPack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/remove"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/chooseIconPack"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/choose_icon_pack"
        android:textColor="?attr/colorOnBackground"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:strokeColor="?attr/colorOnBackground"
        app:strokeWidth="2dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/iconPackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/downloadIconPacks"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/download_recommended"
        android:textColor="?attr/colorOnBackground"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:strokeColor="?attr/colorOnBackground"
        app:strokeWidth="2dp" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/lawnicons_mpl"/>
</LinearLayout>