<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_font"
            android:layout_marginTop="32dp"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_font"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fonts_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fonts_tip_message"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/test_font_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm\nЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбю\n1234567890:?![]{},./\!@#$%^&amp;*()-_=+"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/additional_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:alpha="0.7"
            android:text="@string/navigation_bar_3"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/additional_fonts_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:text="@string/additional_fonts_tip"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_light_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/choose_light_font"
            app:fontFamily="@font/manrope_light"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_light_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_light_font"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:fontFamily="@font/manrope_light"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/test_light_font_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm\nЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбю\n1234567890:?![]{},./\!@#$%^&amp;*()-_=+"
            android:textSize="18sp"
            app:fontFamily="@font/manrope_light"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_bold_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/choose_bold_font"
            android:textStyle="bold"
            app:fontFamily="@font/manrope_bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_bold_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_bold_font"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/manrope_bold"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/test_bold_font_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm\nЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбю\n1234567890:?![]{},./\!@#$%^&amp;*()-_=+"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/manrope_bold"/>
    </LinearLayout>
</ScrollView>
